# scrabble_cheater

./: Cargo.toml  finnish_words.csv  readme.md
src/: board.rs  main.rs  my_prelude.rs
